--- a/sway/config
+++ b/sway/config
@@ -254,10 +254,10 @@ for_window [title = "Firefox - Sharing Indicator"] floating enabled
 for_window [title = "^Open File$"] floating enable
 
 # Idle
-exec swayidle -w \
-timeout 900 'swaylock -f' \
-timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-before-sleep 'swaylock -f'
+# exec swayidle -w \
+# timeout 900 'swaylock -f' \
+# timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+# before-sleep 'swaylock -f'
 
 # This will lock your screen after 900 seconds of inactivity, then turn off
 # your displays after another 900 seconds, and turn your screens back on when
