update swaylock wallpaper

--- a/swaylock/config
+++ b/swaylock/config
@@ -1,4 +1,4 @@
-image=$HOME/wallpapers/grass.png
+image=$HOME/wallpapers/anime.png
 font=Iosevka Nerd Font
 indicator-radius=100
 indicator-thickness=20
