--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,7 +8,7 @@ shell=/usr/bin/zsh
 # title=foot
 # locked-title=no
 
-font=Iosevka Nerd Font:size=16
+font=Terminus:size=16
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -66,7 +66,7 @@ notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 [colors]
 alpha=1.0
 foreground=E8E3E3
-background=181818
+background=272727
 
 # Normal/regular colors (color palette 0-7)
 regular0=151515  # black
