update polybar config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -23,15 +23,14 @@ padding-left = 1
 
 module-margin-left = 0
 
-modules-left = sep launcher bspwm sep2
-modules-center = sep date sep2
-modules-right = backlight filesystem memory cpu temperature sep battery sep2 sep pulseaudio wlan powermenu sep2
+modules-left = launcher bspwm
+modules-center =
+modules-right = backlight filesystem memory cpu temperature battery pulseaudio wlan date
 
 include-file = $HOME/.config/polybar/fonts.ini
 
 tray-position = none
 tray-padding = 2
-tray-background = ${colors.grey}
 
 wm-restack = bspwm
 
@@ -53,9 +52,9 @@ foreground = ${colors.foreground}
 
 padding-left = 1
 
-modules-left = sep launcher bspwm sep2
+modules-left = launcher bspwm
 modules-center =
-modules-right = backlight filesystem memory cpu temperature date sep battery sep2 sep pulseaudio wlan powermenu sep2
+modules-right = backlight filesystem memory cpu temperature battery pulseaudio wlan date
 
 include-file = $HOME/.config/polybar/fonts.ini
 
