--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -2,16 +2,12 @@
 type = internal/cpu
 interval = 2
 
-format = <ramp-load> <label>
+format = <label>
 format-prefix-foreground = ${colors.white}
 
-label = CPU %percentage:0%%
+label = C: %percentage:0%%
 label-foreground = ${colors.white}
-
-ramp-load-0 = "󰍛"
-ramp-load-padding-left = 2
-ramp-load-font = 3
-ramp-load-foreground = ${colors.green}
+label-padding-left = 2
 
 [module/backlight]
 type = internal/backlight
@@ -20,14 +16,10 @@ card = intel_backlight
 
 enable-scroll = true
 
-format = <ramp> <label>
+format = <label>
 
-label = %percentage%%
+label = L: %percentage%%
 label-foreground = ${colors.white}
-
-ramp-0 = "󰃠"
-ramp-padding-left = 2
-ramp-foreground = ${colors.cyan}
 
 [module/bspwm]
 type = internal/bspwm
@@ -35,22 +27,18 @@ type = internal/bspwm
 format = <label-state> <label-mode>
 
 label-focused = 󰄯
-label-focused-background = ${colors.grey}
 label-focused-foreground = ${colors.red}
 label-focused-padding = 1
 
 label-occupied = 󰐾
-label-occupied-background = ${colors.grey}
 label-occupied-foreground = ${colors.secondary}
 label-occupied-padding = 1
 
 label-urgent = 󰐾
-label-urgent-background = ${colors.grey}
 label-urgent-foreground = ${colors.red}
 label-urgent-padding = 1
 
 label-empty = 󰄰
-label-empty-background = ${colors.grey}
 label-empty-foreground = ${colors.secondary}
 label-empty-padding = 1
 
@@ -62,43 +50,36 @@ date =
 date-alt = " %Y-%m-%d"
 
 time = "%I:%M %p%{F-}"
-time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-}"
+time-alt = "%{F#ffffff}M: %a, %b %d%{F-}"
 
-format-prefix = "󰥔"
-format-prefix-background = ${colors.grey}
-format-prefix-foreground = ${colors.white}
-
-label = %date% %time%
-label-background = ${colors.grey}
+label = T:%date% %time%
+label-padding-left = 2
+label-padding-right = 1
 label-foreground = ${colors.white}
 
 [module/memory]
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
-format-prefix = ""
-format-prefix-foreground = ${colors.orange}
+format-prefix = "M:"
 format-prefix-padding-left = 2
-format-prefix-padding-right = 2
+format-prefix-padding-right = 1
 label = %output% MB
 label-foreground = ${colors.white}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume =<ramp-volume>
-label-volume = %percentage%%
+format-volume = <label-volume>
+label-volume = V: %percentage%%
 label-volume-foreground = ${colors.white}
+label-volume-padding-left = 2
 
-label-muted = "󰖁"
+label-muted = "V: Muted"
+label-muted-padding-left = 2
 
 label-muted-foreground = ${colors.red}
 label-muted-background = ${colors.grey}
-
-ramp-volume-0 = "󰕾"
-
-ramp-volume-foreground = ${colors.purple}
-ramp-volume-background = ${colors.grey}
 
 click-right = pavucontrol &
 
@@ -107,59 +88,33 @@ type = internal/temperature
 thermal-zone = 0
 warn-temperature = 70
 
-format = <ramp> <label>
-format-warn = <ramp> <label-warn>
+format = <label>
+format-warn = <label-warn>
 
-label = %temperature-c%
+label =T: %temperature-c%
 label-padding-right = 2
-label-warn = %temperature-c%
+label-padding-left = 2
+label-warn = T: %temperature-c%
 label-warn-padding-right = 2
 
-ramp-0 = "󰔐"
-ramp-padding-left = 2
 label-foreground = ${colors.white}
 label-warn-foreground = ${colors.red}
 ramp-foreground = ${colors.red}
-
-[module/powermenu]
-type = custom/text
-
-content = "󰤆"
-content-background = ${colors.grey}
-content-foreground = ${colors.red}
-
-click-left = ~/.config/scripts/powermenu
-
-[module/fanspeed]
-type = custom/script
-format-prefix = "󰈐"
-format-prefix-padding-left = 2
-format-prefix-foreground = ${colors.pink}
-exec = ~/.config/scripts/fanspeed
-interval = 10
 
 [module/wlan]
 type = internal/network
 interface = wlo1
 interval = 3.0
 
-format-connected = <ramp-signal>
-;label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
+label-connected = W: %{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
+label-connected-padding-left = 2
 
 format-disconnected = <label-disconnected>
 
-label-disconnected = %{A1:alacritty -e nmtui &:}󰖪%{A}
+label-disconnected = W: %{A1:alacritty -e nmtui &:}Disconnected%{A}
 label-disconnected-padding-left = 2
-label-disconnected-padding-right = 2
 label-disconnected-foreground = ${colors.red}
-label-disconnected-background = ${colors.grey}
-
-ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩%{A}
-ramp-signal-padding-left = 2
-ramp-signal-padding-right = 2
-ramp-signal-foreground = ${colors.orange}
-ramp-signal-background = ${colors.grey}
 
 [module/battery]
 type = internal/battery
@@ -167,31 +122,13 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full = <ramp-capacity>
-label-full-foreground = ${colors.white}
+format-full =B: <label-full>
+label-full-foreground = ${colors.green}
 
-format-charging = <animation-charging>
-label-charging-foreground = ${colors.white}
+format-charging =B: <label-charging>
+label-charging-foreground = ${colors.green}
 
-animation-charging-0 = "   "
-animation-charging-1 = "   "
-animation-charging-2 = "   "
-animation-charging-3 = "   "
-animation-charging-4 = "   "
-
-animation-charging-foreground = ${colors.green}
-animation-charging-background = ${colors.grey}
-animation-charging-framerate = 750
-
-format-discharging = <ramp-capacity>
-label-discharging-foreground = ${colors.white}
-
-ramp-capacity-0 = "%{F#FF6E6E}   %{F-}"
-ramp-capacity-1 = "%{F#FF6E6E}   %{F-}"
-ramp-capacity-2 = "%{F#69FF94}   %{F-}"
-ramp-capacity-3 = "%{F#69FF94}   %{F-}"
-ramp-capacity-4 = "%{F#69FF94}   %{F-}"
-ramp-capacity-background = ${colors.grey}
+format-discharging =%{F#69FF94}B: <label-discharging>%{F-}
 
 [module/filesystem]
 type = internal/fs
@@ -214,14 +151,8 @@ fixed-values = true
 ;;spacing = 4
 
 format-mounted = <label-mounted>
-format-mounted-prefix = "󰉋 "
-format-mounted-prefix-font = 3
+format-mounted-prefix = "D: "
 format-mounted-prefix-padding-left = 2
-format-mounted-prefix-foreground = ${colors.purple}
-
-format-unmounted = <label-unmounted>
-format-unmounted-prefix = "󰇑"
-format-unmounted-prefix-padding-left = 2
 
 ; Available tokens:
 ;   %mountpoint%
@@ -239,23 +170,11 @@ label-unmounted = %mountpoint%: not mounted
 
 ramp-capacity-framerate = 750
 
-[module/bluetooth]
-type = custom/text
-
-content = "󰂯"
-content-background = ${colors.grey}
-content-foreground = ${colors.cyan}
-
-click-left = ~/.config/scripts/toggle-bluetooth
-
-click-right = blueman-manager &
-
 [module/launcher]
 type = custom/text
 
 content = "󰣇 "
 
-content-background = ${colors.grey}
 content-foreground = ${colors.cyan}
 
 click-left = rofi -no-lazy-grab -show drun -theme $HOME/.config/rofi/themes/launcher.rasi
@@ -268,15 +187,3 @@ format = "<label>  "
 format-prefix = "󰋚 "
 format-foreground = ${colors.foreground}
 format-prefix-foreground = ${colors.cyan}
-
-[module/sep]
-type = custom/text
-content = ""
-content-foreground = ${colors.grey}
-content-font = 4
-
-[module/sep2]
-type = custom/text
-content = " "
-content-foreground = ${colors.grey}
-content-font = 4
