--- a/sway/config
+++ b/sway/config
@@ -1,6 +1,6 @@
 # Variables
 
-set $term alacritty
+set $term foot
 
 set $grimshot ~/.config/scripts/grimshot.sh
 
@@ -34,7 +34,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output * bg /home/paolo/wallpapers/anime.png fill
+output * bg /home/paolo/wallpapers/snake.png fill
 
 output eDP-1 {
   mode 1920x1080@60Hz
@@ -273,11 +273,11 @@ gaps inner 4
 
 # Titlebars
 font pango:Iosevka Nerd Font Regular 14
-default_border pixel 2
-set $bg #3492ba
-set $bod_f #3492ba
+default_border pixel 1
+set $bg #d8dee9
+set $bod_f #d8dee9
 set $bod_u #303030
-set $text #d2d2d2
+set $text #272727
 client.focused   $bod_f $bg $text $bod_f $bod_f
 client.unfocused $bod_u $bg $text $bod_u $bod_u
 client.focused_inactive $bod_u $bg $text $bod_u $bod_u
