update polybar config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -25,7 +25,7 @@ module-margin-left = 0
 
 modules-left = launcher bspwm
 modules-center =
-modules-right = backlight filesystem memory cpu temperature battery pulseaudio wlan date
+modules-right = backlight filesystem memory cpu temperature battery pulseaudio wlan date powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -54,7 +54,7 @@ padding-left = 1
 
 modules-left = launcher bspwm
 modules-center =
-modules-right = backlight filesystem memory cpu temperature battery pulseaudio wlan date
+modules-right = backlight filesystem memory cpu temperature battery pulseaudio wlan date powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
