--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -2,12 +2,16 @@
 type = internal/cpu
 interval = 2
 
-format = <label>
+format = <ramp-load> <label>
 format-prefix-foreground = ${colors.white}
 
-label = C: %percentage:0%%
+label = CPU %percentage:0%%
 label-foreground = ${colors.white}
-label-padding-left = 2
+
+ramp-load-0 = "󰍛"
+ramp-load-padding-left = 2
+ramp-load-font = 3
+ramp-load-foreground = ${colors.green}
 
 [module/backlight]
 type = internal/backlight
@@ -16,10 +20,14 @@ card = intel_backlight
 
 enable-scroll = true
 
-format = <label>
+format = <ramp> <label>
 
-label = L: %percentage%%
+label = %percentage%%
 label-foreground = ${colors.white}
+
+ramp-0 = "󰃠"
+ramp-padding-left = 2
+ramp-foreground = ${colors.cyan}
 
 [module/bspwm]
 type = internal/bspwm
@@ -27,18 +35,22 @@ type = internal/bspwm
 format = <label-state> <label-mode>
 
 label-focused = 󰄯
+label-focused-background = ${colors.grey}
 label-focused-foreground = ${colors.red}
 label-focused-padding = 1
 
 label-occupied = 󰐾
+label-occupied-background = ${colors.grey}
 label-occupied-foreground = ${colors.secondary}
 label-occupied-padding = 1
 
 label-urgent = 󰐾
+label-urgent-background = ${colors.grey}
 label-urgent-foreground = ${colors.red}
 label-urgent-padding = 1
 
 label-empty = 󰄰
+label-empty-background = ${colors.grey}
 label-empty-foreground = ${colors.secondary}
 label-empty-padding = 1
 
@@ -49,37 +61,44 @@ interval = 5
 date =
 date-alt = " %Y-%m-%d"
 
-time = "%I:%M %p%{F-}"
-time-alt = "%{F#ffffff}M: %a, %b %d%{F-}"
+time = "%I:%M %p%{F-}  "
+time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-}  "
 
-label = T:%date% %time%
-label-padding-left = 2
-label-padding-right = 1
+format-prefix = "󰥔"
+format-prefix-background = ${colors.grey}
+format-prefix-foreground = ${colors.white}
+
+label = %date% %time%
+label-background = ${colors.grey}
 label-foreground = ${colors.white}
 
 [module/memory]
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
-format-prefix = "M:"
+format-prefix = ""
+format-prefix-foreground = ${colors.orange}
 format-prefix-padding-left = 2
-format-prefix-padding-right = 1
+format-prefix-padding-right = 2
 label = %output% MB
 label-foreground = ${colors.white}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume>
-label-volume = V: %percentage%%
+format-volume = <ramp-volume> <label-volume>
+label-volume = %percentage%%
 label-volume-foreground = ${colors.white}
-label-volume-padding-left = 2
 
-label-muted = "V: Muted"
-label-muted-padding-left = 2
+label-muted = "  󰖁 Muted"
 
 label-muted-foreground = ${colors.red}
 label-muted-background = ${colors.grey}
+
+ramp-volume-0 = "  󰕾"
+
+ramp-volume-foreground = ${colors.purple}
+ramp-volume-background = ${colors.grey}
 
 click-right = pavucontrol &
 
@@ -88,33 +107,59 @@ type = internal/temperature
 thermal-zone = 0
 warn-temperature = 70
 
-format = <label>
-format-warn = <label-warn>
+format = <ramp> <label>
+format-warn = <ramp> <label-warn>
 
-label =T: %temperature-c%
+label = %temperature-c%
 label-padding-right = 2
-label-padding-left = 2
-label-warn = T: %temperature-c%
+label-warn = %temperature-c%
 label-warn-padding-right = 2
 
+ramp-0 = "󰔐"
+ramp-padding-left = 2
 label-foreground = ${colors.white}
 label-warn-foreground = ${colors.red}
 ramp-foreground = ${colors.red}
+
+[module/powermenu]
+type = custom/text
+
+content = "󰤆 "
+content-background = ${colors.grey}
+content-foreground = ${colors.red}
+
+click-left = ~/.config/scripts/powermenu
+
+[module/fanspeed]
+type = custom/script
+format-prefix = "󰈐"
+format-prefix-padding-left = 2
+format-prefix-foreground = ${colors.pink}
+exec = ~/.config/scripts/fanspeed
+interval = 10
 
 [module/wlan]
 type = internal/network
 interface = wlo1
 interval = 3.0
 
-label-connected = W: %{A1:alacritty -e nmtui &:}%essid%%{A}
+format-connected = <ramp-signal>
+;label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
-label-connected-padding-left = 2
 
 format-disconnected = <label-disconnected>
 
-label-disconnected = W: %{A1:alacritty -e nmtui &:}Disconnected%{A}
+label-disconnected = %{A1:alacritty -e nmtui &:}󰖪 Disconnected%{A}
 label-disconnected-padding-left = 2
+label-disconnected-padding-right = 2
 label-disconnected-foreground = ${colors.red}
+label-disconnected-background = ${colors.grey}
+
+ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩 Connected%{A}
+ramp-signal-padding-left = 2
+ramp-signal-padding-right = 2
+ramp-signal-foreground = ${colors.orange}
+ramp-signal-background = ${colors.grey}
 
 [module/battery]
 type = internal/battery
@@ -122,13 +167,34 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full =B: <label-full>
-label-full-foreground = ${colors.green}
+format-full = <ramp-capacity> <label-full>
+label-full = %percentage%%
+label-full-foreground = ${colors.white}
 
-format-charging =B: <label-charging>
-label-charging-foreground = ${colors.green}
+format-charging = <animation-charging> <label-charging>
+label-charging-foreground = ${colors.white}
+label-charging = %percentage%%
 
-format-discharging =%{F#69FF94}B: <label-discharging>%{F-}
+animation-charging-0 = "   "
+animation-charging-1 = "   "
+animation-charging-2 = "   "
+animation-charging-3 = "   "
+animation-charging-4 = "   "
+
+animation-charging-foreground = ${colors.green}
+animation-charging-background = ${colors.grey}
+animation-charging-framerate = 750
+
+format-discharging = <ramp-capacity> <label-discharging>
+label-discharging-foreground = ${colors.white}
+label-discharging = %percentage%%
+
+ramp-capacity-0 = "%{F#FF6E6E}   %{F-}"
+ramp-capacity-1 = "%{F#FF6E6E}   %{F-}"
+ramp-capacity-2 = "%{F#69FF94}   %{F-}"
+ramp-capacity-3 = "%{F#69FF94}   %{F-}"
+ramp-capacity-4 = "%{F#69FF94}   %{F-}"
+ramp-capacity-background = ${colors.grey}
 
 [module/filesystem]
 type = internal/fs
@@ -151,8 +217,14 @@ fixed-values = true
 ;;spacing = 4
 
 format-mounted = <label-mounted>
-format-mounted-prefix = "D: "
+format-mounted-prefix = "󰉋 "
+format-mounted-prefix-font = 3
 format-mounted-prefix-padding-left = 2
+format-mounted-prefix-foreground = ${colors.purple}
+
+format-unmounted = <label-unmounted>
+format-unmounted-prefix = "󰇑"
+format-unmounted-prefix-padding-left = 2
 
 ; Available tokens:
 ;   %mountpoint%
@@ -170,11 +242,23 @@ label-unmounted = %mountpoint%: not mounted
 
 ramp-capacity-framerate = 750
 
+[module/bluetooth]
+type = custom/text
+
+content = "󰂯"
+content-background = ${colors.grey}
+content-foreground = ${colors.cyan}
+
+click-left = ~/.config/scripts/toggle-bluetooth
+
+click-right = blueman-manager &
+
 [module/launcher]
 type = custom/text
 
 content = "󰣇 "
 
+content-background = ${colors.grey}
 content-foreground = ${colors.cyan}
 
 click-left = rofi -no-lazy-grab -show drun -theme $HOME/.config/rofi/themes/launcher.rasi
@@ -187,3 +271,15 @@ format = "<label>  "
 format-prefix = "󰋚 "
 format-foreground = ${colors.foreground}
 format-prefix-foreground = ${colors.cyan}
+
+[module/sep]
+type = custom/text
+content = ""
+content-foreground = ${colors.grey}
+content-font = 4
+
+[module/sep2]
+type = custom/text
+content = " "
+content-foreground = ${colors.grey}
+content-font = 4
