--- a/sway/config
+++ b/sway/config
@@ -34,14 +34,14 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output * bg /home/paolo/wallpapers/snake.png fill
-
 output eDP-1 {
+  background /home/paolo/wallpapers/snake.png fill
   mode 1920x1080@60Hz
   pos 1920 768
 }
 
 output HDMI-A-1 {
+  background /home/paolo/wallpapers/snake.png fill
   mode 1920x1080@75Hz
   pos 0 768
   transform normal
