--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -2,16 +2,12 @@
 type = internal/cpu
 interval = 2
 
-format = <ramp-load> <label>
+format = <label>
 format-prefix-foreground = ${colors.white}
 
 label = CPU %percentage:0%%
+label-padding-right = 2
 label-foreground = ${colors.white}
-
-ramp-load-0 = "󰍛"
-ramp-load-padding-left = 2
-ramp-load-font = 3
-ramp-load-foreground = ${colors.green}
 
 [module/backlight]
 type = internal/backlight
@@ -20,14 +16,11 @@ card = intel_backlight
 
 enable-scroll = true
 
-format = <ramp> <label>
+format = <label>
 
-label = %percentage%%
+label = SCREEN %percentage%%
 label-foreground = ${colors.white}
-
-ramp-0 = "󰃠"
-ramp-padding-left = 2
-ramp-foreground = ${colors.cyan}
+label-padding-right = 2
 
 [module/bspwm]
 type = internal/bspwm
@@ -59,16 +52,13 @@ type = internal/date
 interval = 5
 
 date =
-date-alt = " %Y-%m-%d"
+date-alt = "%Y-%m-%d"
 
-time = "%I:%M %p%{F-}  "
-time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-}  "
+time = "TIME %I:%M %p%{F-}" 
+time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-}"
 
-format-prefix = "󰥔"
-format-prefix-background = ${colors.grey}
-format-prefix-foreground = ${colors.white}
-
-label = %date% %time%
+label = %time%
+label-padding-right = 2
 label-background = ${colors.grey}
 label-foreground = ${colors.white}
 
@@ -76,29 +66,22 @@ label-foreground = ${colors.white}
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
-format-prefix = ""
-format-prefix-foreground = ${colors.orange}
-format-prefix-padding-left = 2
-format-prefix-padding-right = 2
-label = %output% MB
+label = RAM %output% MB
+label-padding-right = 2
 label-foreground = ${colors.white}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <ramp-volume> <label-volume>
-label-volume = %percentage%%
+format-volume = <label-volume>
+label-volume = VOL %percentage%%
+label-volume-padding-right = 2
 label-volume-foreground = ${colors.white}
 
-label-muted = "  󰖁 Muted"
-
+label-muted = "VOL MUTED"
+label-muted-padding-right = 2
 label-muted-foreground = ${colors.red}
 label-muted-background = ${colors.grey}
-
-ramp-volume-0 = "  󰕾"
-
-ramp-volume-foreground = ${colors.purple}
-ramp-volume-background = ${colors.grey}
 
 click-right = pavucontrol &
 
@@ -107,19 +90,16 @@ type = internal/temperature
 thermal-zone = 0
 warn-temperature = 70
 
-format = <ramp> <label>
-format-warn = <ramp> <label-warn>
+format = <label>
+format-warn = <label-warn>
 
-label = %temperature-c%
+label = TEMP %temperature-c%
 label-padding-right = 2
-label-warn = %temperature-c%
+label-warn = TEMP %temperature-c%
 label-warn-padding-right = 2
 
-ramp-0 = "󰔐"
-ramp-padding-left = 2
 label-foreground = ${colors.white}
 label-warn-foreground = ${colors.red}
-ramp-foreground = ${colors.red}
 
 [module/powermenu]
 type = custom/text
@@ -143,8 +123,8 @@ type = internal/network
 interface = wlo1
 interval = 3.0
 
-format-connected = <ramp-signal>
-;label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
+format-connected = <label-connected>
+label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
@@ -155,46 +135,26 @@ label-disconnected-padding-right = 2
 label-disconnected-foreground = ${colors.red}
 label-disconnected-background = ${colors.grey}
 
-ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩 Connected%{A}
-ramp-signal-padding-left = 2
-ramp-signal-padding-right = 2
-ramp-signal-foreground = ${colors.orange}
-ramp-signal-background = ${colors.grey}
-
 [module/battery]
 type = internal/battery
 battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full = <ramp-capacity> <label-full>
-label-full = %percentage%%
+format-full = <label-full>
+label-full = BAT %percentage%%
+label-full-padding-right = 2
 label-full-foreground = ${colors.white}
 
-format-charging = <animation-charging> <label-charging>
+format-charging = <label-charging>
 label-charging-foreground = ${colors.white}
-label-charging = %percentage%%
+label-charging = BAT %percentage%%
+label-charging-padding-right = 2
 
-animation-charging-0 = "   "
-animation-charging-1 = "   "
-animation-charging-2 = "   "
-animation-charging-3 = "   "
-animation-charging-4 = "   "
-
-animation-charging-foreground = ${colors.green}
-animation-charging-background = ${colors.grey}
-animation-charging-framerate = 750
-
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <label-discharging>
 label-discharging-foreground = ${colors.white}
-label-discharging = %percentage%%
-
-ramp-capacity-0 = "%{F#FF6E6E}   %{F-}"
-ramp-capacity-1 = "%{F#FF6E6E}   %{F-}"
-ramp-capacity-2 = "%{F#69FF94}   %{F-}"
-ramp-capacity-3 = "%{F#69FF94}   %{F-}"
-ramp-capacity-4 = "%{F#69FF94}   %{F-}"
-ramp-capacity-background = ${colors.grey}
+label-discharging = BAT %percentage%%
+label-discharging-padding-right = 2
 
 [module/filesystem]
 type = internal/fs
@@ -217,14 +177,8 @@ fixed-values = true
 ;;spacing = 4
 
 format-mounted = <label-mounted>
-format-mounted-prefix = "󰉋 "
-format-mounted-prefix-font = 3
-format-mounted-prefix-padding-left = 2
-format-mounted-prefix-foreground = ${colors.purple}
 
 format-unmounted = <label-unmounted>
-format-unmounted-prefix = "󰇑"
-format-unmounted-prefix-padding-left = 2
 
 ; Available tokens:
 ;   %mountpoint%
@@ -236,7 +190,8 @@ format-unmounted-prefix-padding-left = 2
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = %used%
+label-mounted = DISK %used%
+label-mounted-padding-right = 2
 
 label-unmounted = %mountpoint%: not mounted
 
@@ -256,7 +211,7 @@ click-right = blueman-manager &
 [module/launcher]
 type = custom/text
 
-content = "󰣇 "
+content = "MENU"
 
 content-background = ${colors.grey}
 content-foreground = ${colors.cyan}
@@ -271,15 +226,3 @@ format = "<label>  "
 format-prefix = "󰋚 "
 format-foreground = ${colors.foreground}
 format-prefix-foreground = ${colors.cyan}
-
-[module/sep]
-type = custom/text
-content = ""
-content-foreground = ${colors.grey}
-content-font = 4
-
-[module/sep2]
-type = custom/text
-content = " "
-content-foreground = ${colors.grey}
-content-font = 4
